  This attribute represents the CF variable name of the object. It is populated
  when loading from CF-netCDF files and is used when writing to CF-netCDF. A
  var_name keyword argument has also been added to the
  :meth:`iris.cube.Cube.coord()`, :meth:`iris.cube.Cube.coords()` and
  :meth:`iris.cube.Cube.aux_factory()` methods.

Bugs fixed
----------
* N/A

Incompatible changes
--------------------
* The deprecated :attr:`iris.cube.Cube.unit` and :attr:`iris.coords.Coord.unit`
  attributes have been removed.

Deprecations
------------
* The :meth:`iris.coords.Coord.unit_converted()` method has been deprecated.
  Users should make a copy of the coordinate using
  :meth:`iris.coords.Coord.copy()` and then call the
  :meth:`iris.coords.Coord.convert_units()` method of the new coordinate.
* With the addition of the var_name attribute the signatures of DimCoord and
  AuxCoord have changed. This should have no impact if you are providing
  parameters as keyword arguments, but it may cause issues if you are relying
  on the position/order of the arguments.


----------------------------


Release 1.1 (7 Dec, 2012)
==========================


Features added
--------------
* Support for Mac OS X.
* GRIB1 import now supports time units of "3 hours".
* Fieldsfile import now supports unpacked and "CRAY" 32-bit packed data
  in 64-bit Fieldsfiles.
* PP file import now supports "CRAY" 32-bit packed data.
* Various performance improvements, particularly for netCDF import,
  PP import, and constraints.
* GRIB2 export now supports level types of altitude and height
  (codes 102 and 103).
* iris.analysis.cartography.area_weights now supports non-standard
  dimension orders.
* PP file import now adds the "forecast_reference_time" for fields
  where LBTIM is 11, 12, 13, 31, or 32.
* PP file import now supports LBTIM values of 1, 2, and 3.
* Fieldsfile import now has some support for ancillary files.
* Coordinate categorisation functions added for day-of-year and